[package]
name = "webgl_render_area"
version = "0.1.0"
categories = ["wasm"]
edition = "2021"

[lib]
crate-type = ["lib","cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.45"
js-sys = "0.3.56"
svgtypes = "0.8.0"
csscolorparser = "0.5.0"

# dev dependencies
console_error_panic_hook = "0.1.5"
# rand = "0.8.5"
# getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.56"
features = [
    "console",
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlFramebuffer',
    'WebGlRenderbuffer',
    'WebGlUniformLocation',
    'Window',
]

[dev-dependencies]
serde_json = "1.0.79"
wasm-bindgen-test = "0.3.29"

# cpu drawing
line_drawing = "1.0.0"
triangle = "0.1.353"
minifb = "0.20"

[profile.test] 
opt-level = 3